Fixed issue with justify content on mobile

--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -103,6 +103,7 @@
 
 				@include breakpoint(medium down) {
 					flex-flow: column;
+					justify-content: space-between;
 				}
 			}
 		}
